i18n/ja/docusaurus-plugin-content-docs/version-19/Preferences/general.md
---
id: general
title: 一般ページ
---

このページには、4Dアプリケーションの一般的な動作を設定するためのオプションが含まれています。

## オプション

### 開始時

このオプションは、ユーザーがアプリケーションのみを起動したとき、4D が起動時に提供するデフォルトの表示を設定することができます。

* **何もしない**: アプリケーションウィンドウのみが表示されます。
* **ローカルプロジェクトを開くダイアログ**: 4Dは標準のドキュメントを開くダイアログボックスを表示し、ローカルのプロジェクトを選択することができます。
* **最後に使用したプロジェクトを開く**: 4D は最後に使用されたプロジェクトスを直接開きます。ドキュメントを開くダイアログボックスは表示されません。
> このオプションが選択されているときに、ドキュメントを開くダイアログボックスを強制的に表示させるには、プロジェクトを起動する際に、**Alt** (Windows) または **Option** (macOS) キーを押します。

* **リモートプロジェクトを開くダイアログ**: 4D は 4D Server にログオンする標準のダイアログボックスを表示し、ネットワークに公開されたプロジェクトを指定することができます。
* **Welcomeウィザードを開くダイアログ** (初期設定): 4D は Welcomeウィザードダイアログボックスを表示します。
> **4D Server**: 4D Server アプリケーションは、このオプションを無視します。 この環境においては、**何もしない** モードが常に選択されます。

### 自動フォーム作成

> このオプションは、バイナリデータベースでのみ使用され、プロジェクトアーキテクチャーでは無視されます。 doc.4d.com を参照ください。

#### ウィンドウのタブ (macOSのみ)

macOS Sierra 以降、Mac のアプリケーションは、複数のウィンドウを整理しやすくする自動ウィンドウタブ機能を利用することができます。単一の親ウィンドウ内でドキュメントウィンドウを積み重ね、タブを通してブラウズすることができます。 この機能は小さなスクリーンや、トラックパッドを使用している場合などに有用です。

この機能は、以下の環境において利用することができます (4D 64-bit版のみ):

* メソッドエディターウィンドウ
* フォームエディターウィンドウ

これらのエディターのウィンドウはすべて、タブ形式にすることができます:

![](/assets/en/Preferences/general2.png)

**ウィンドウ** メニューのコマンドによって、タブを管理することができます:

![](/assets/en/Preferences/general3.png)

4D の環境設定ダイアログボックス内では、**ウィンドウタブ** オプションでこの機能を管理することができます:

![](/assets/en/Preferences/general4.png)

次の値が提供されています:

* **システム設定に従う** (デフォルト): 4D のウィンドウは、macOSシステム環境設定で定義されているように振る舞います (フルスクリーン時のみ、常に、あるいは手動)。
* **しない**: 4Dフォームエディターあるいはメソッドエディターで開かれた新しいドキュメントは常に新しいウィンドウを作成します (タブは作成されません)。
* **常にする**: 4Dフォームエディターあるいはコードエディターで開かれた新しいドキュメントは常に新しいタブを作成します。

### アプリケーションモードに移動する時に、デザインモードを終了する

このオプションが選択されていると、**アプリケーションモード** コマンドを使用してユーザーがアプリケーションモードに移動する際に、デザインモードのすべてのウィンドウが閉じられます。 このオプションがチェックされていないと (初期設定)、デザインモードのウィンドウはアプリケーションモードの後ろに表示されたままとなります。

### バイナリー形式のデータベース作成を有効化する

このオプションをチェックすると、**ファイル ＞ 新規** メニューと、ツールバーの **新規** ボタンに、2つの項目が追加されます:

* **データベース...**
* **ストラクチャー定義を使用したデータベース...**

![](/assets/en/Preferences/general5.png)

この項目を使用するとバイナリーデータベースを作成することができるようになります([新しいデータベースを作成する](https://doc.4d.com/4Dv19/4D/19/Creating-a-new-database.300-5416694.ja.html) の章を参照)。 これらの項目はデフォルトでは表示されません。今後 4D は、新規の開発にはプロジェクトベースのアーキテクチャーを使用することを推奨するからです。

## 新規プロジェクト作成時

### ログファイルを使用

このオプションをチェックすると、新規データベース作成時にログファイルが自動的に開始され、使用されます。 詳細な情報については [ログファイル (.journal)](Backup/log.md) を参照ください。

### パッケージを作成する

このオプションがチェックされていると、4Dデータベースは自動で .4dbase 拡張子が付いたフォルダーに作成されます。

この原則のため、macOS ではデータベースフォルダーが専用プロパティ付きのパッケージとして表示されます。 Windows では、これは普通のフォルダーと変わりありません。

### テキスト比較の言語

このパラメーターは新規データベースにおいて、文字列の処理と比較で使用されるデフォルトの言語を設定します。 言語の選択は、テキストの並べ替えや検索、文字の大小などの比較ルール等に直接影響を与えます。ただし、テキストの翻訳や日付・時刻・通貨のフォーマットはシステムの言語設定が使用され、この設定には影響されません。 初期設定では、4D はシステムに設定されているカレントのユーザー言語を使用します。

つまり、4Dデータベースはシステム言語とは異なる言語で動作することができます。 データベースが開かれるとき、4Dエンジンはデータファイルに使用されている言語を検知し、(インタープリターやコンパイルモードの) ランゲージに提供します。 データベースエンジン、あるいはランゲージのいずれがテキスト比較をおこなうかに関わらず、同じ言語が使用されます。

新規にデータファイルを作成する際、4D はこのメニューで設定されている言語を使用します。 ストラクチャーの言語と異なる言語のデータファイルを開くと、データファイルの言語が使用され、ストラクチャーに言語コードがコピーされます。
> データベース設定を使用して、開かれているデータベースの言語を変更することができます ([テキスト比較](https://doc.4d.com/4Dv19/4D/19/DatabaseData-storage-page.300-5416926.ja.html#460252) 参照)。

## ドキュメントの場所

このエリアでは、カレントブラウザーに表示される 4D HTMLドキュメントへのアクセスを設定します:

* ユーザーがエクスプローラーの **コマンドページ** 上のコマンドをダブルクリックしたとき
* ユーザーがメソッドエディター上でコマンド名をクリックし、**F1**キーを押したとき

4Dオンラインドキュメントサイトに直接アクセスするか、ローカルに保存したファイルにアクセスするかを選択できます。

### ローカルフォルダー

スタティックな HTMLドキュメントの場所を指定します。 デフォルトでこれは \Help\Command\language サブフォルダーに設定されています。 このエリアに割り当てられているメニューをクリックすると、場所を見ることができます。 このサブフォルダーが存在しない場合、場所は赤で表示されます。

この場所は必要に応じて変更することができます。たとえば、アプリケーションの言語とは異なる言語でドキュメントを表示したい場合などです。 HTMLドキュメントは、異なるボリュームや Webサーバー上などに置くことも可能です。 他の場所を指定するには、メニューの隣の [...] ボタンをクリックし、ドキュメントのルートフォルダー (fr, en, es, de または ja などの言語に対応するフォルダー) を選択します。

### Webサイト

4D Doc Center 上の対応するバージョンのオンラインドキュメントにアクセスするための URL。 4D はこの URL をベースとしてドキュメントの呼び出しを構築します。 この URL を変更して、たとえばアプリケーションランゲージとは異なる言語のドキュメントを参照できます。 エリア右側のテストボタンを使用すると、既定のブラウザーが起動され、指定された URL にアクセスします。

### 最初にローカルフォルダーを見る

(デフォルトでチェックされている) このオプションは、エクスプローラーや F1キーで呼び出されたドキュメントのページを探す場所を設定します。

* チェックされている場合、4D はまずローカルフォルダーでページを探します。 ページが見つかれば、4D はそのページをカレントブラウザーで表示します。 If it is found, 4D displays the page in the current browser. この場合インターネットに接続されていない環境でも、ローカルのドキュメントが参照できます。
* チェックされていない場合、4D は Webサイトのオンラインドキュメントに直接アクセスし、カレントブラウザーでページを表示します。 ページが見つからない場合、4D はブラウザーにエラーメッセージを表示します。
