i18n/ja/docusaurus-plugin-content-docs/version-20/Preferences/general.md
---
id: general
title: 一般ページ
---

このページには、4Dアプリケーションの一般的な動作を設定するためのオプションが含まれています。

## オプション

### 開始時

このオプションは、ユーザーがアプリケーションのみを起動したとき、4D が起動時に提供するデフォルトの表示を設定することができます。

*   **何もしない**: アプリケーションウィンドウのみが表示されます。
*   **ローカルプロジェクトを開くダイアログ**: 4Dは標準のドキュメントを開くダイアログボックスを表示し、ローカルのプロジェクトを選択することができます。
*   **最後に使用したプロジェクトを開く**: 4D は最後に使用されたプロジェクトスを直接開きます。ドキュメントを開くダイアログボックスは表示されません。 ＞このオプションが選択されているときに、ドキュメントを開くダイアログボックスを強制的に表示させるには、プロジェクトを起動する際に、**Alt** (Windows) または **Option** (macOS) キーを押します。
*   **リモートプロジェクトを開くダイアログ**: 4D は 4D Server にログオンする標準のダイアログボックスを表示し、ネットワークに公開されたプロジェクトを指定することができます。
*   **Welcomeウィザードを開くダイアログ** (初期設定): 4D は Welcomeウィザードダイアログボックスを表示します。
> **4D Server**: 4D Server アプリケーションは、このオプションを無視します。 この環境においては、**何もしない** モードが常に選択されます。

### 自動フォーム作成

> このオプションは、バイナリデータベースでのみ使用され、プロジェクトアーキテクチャーでは無視されます。 doc.4d.com を参照ください。

### ウィンドウのタブ (macOSのみ)

macOS Sierra 以降、Mac のアプリケーションは、複数のウィンドウを整理しやすくする自動ウィンドウタブ機能を利用することができます。単一の親ウィンドウ内でドキュメントウィンドウを積み重ね、タブを通してブラウズすることができます。 この機能は小さなスクリーンや、トラックパッドを使用している場合などに有用です。

この機能は、以下の環境において利用することができます (4D 64-bit版のみ):

*   コードエディターウィンドウ
*   フォームエディターウィンドウ

これらのエディターのウィンドウはすべて、タブ形式にすることができます:

![](/assets/en/Preferences/general2.png)

**ウィンドウ** メニューのコマンドによって、タブを管理することができます:

![](/assets/en/Preferences/general3.png)

4D の環境設定ダイアログボックス内では、**ウィンドウタブ** オプションでこの機能を管理することができます:

![](/assets/en/Preferences/general4.png)

次の値が提供されています:

*   **システム設定に従う** (デフォルト): 4D のウィンドウは、macOSシステム環境設定で定義されているように振る舞います (フルスクリーン時のみ、常に、あるいは手動)。
*   **しない**: 4Dフォームエディターあるいはコードエディターで開かれた新しいドキュメントは常に新しいウィンドウを作成します (タブは作成されません)。
*   **常にする**: 4Dフォームエディターあるいはコードエディターで開かれた新しいドキュメントは常に新しいタブを作成します。

### アピアランス (macOSのみ)

このメニューで、**4D開発**環境で使用するカラースキームを選択します。 指定されたカラースキームは、デザインモードのすべてのエディターとウィンドウに適用されます。

> **デスクトップアプリケーション** で使用するカラースキームは、ストラクチャー設定ダイアログボックスの "インターフェース" ページで設定することができます。

次の値が提供されています:

*   **システムのカラースキーム設定に合わせる** (デフォルト): macOSシステム環境設定で定義されているカラースキームを使用します。
*   **Light**: ライトテーマを使用します。
*   **Dark**: ダークテーマを使用します。

> この設定は macOS でのみサポートされています。 Windows上では、"Light" テーマが常に使用されます。


### アプリケーションモードに移動する時に、デザインモードを終了する

このオプションが選択されていると、**アプリケーションモード** コマンドを使用してユーザーがアプリケーションモードに移動する際に、デザインモードのすべてのウィンドウが閉じられます。 このオプションがチェックされていないと (初期設定)、デザインモードのウィンドウはアプリケーションモードの後ろに表示されたままとなります。


### バイナリー形式のデータベース作成を有効化する

このオプションをチェックすると、**ファイル ＞ 新規** メニューと、ツールバーの **新規** ボタンに、2つの項目が追加されます:

*   **データベース...**
*   **ストラクチャー定義を使用したデータベース...**

![](/assets/en/Preferences/general5.png)

この項目を使用するとバイナリーデータベースを作成することができるようになります([新しいデータベースを作成する](https://doc.4d.com/4Dv19/4D/19/Creating-a-new-database.300-5416694.ja.html) の章を参照)。 これらの項目はデフォルトでは表示されません。今後 4D は、新規の開発にはプロジェクトベースのアーキテクチャーを使用することを推奨するからです。

## 新規プロジェクト作成時

### ログファイルを使用

このオプションをチェックすると、新規データベース作成時にログファイルが自動的に開始され、使用されます。 詳細な情報については [ログファイル (.journal)](Backup/log.md) を参照ください。

### パッケージを作成する

このオプションがチェックされていると、4Dデータベースは自動で .4dbase 拡張子が付いたフォルダーに作成されます。

この原則のため、macOS ではデータベースフォルダーが専用プロパティ付きのパッケージとして表示されます。 Windows では、これは普通のフォルダーと変わりありません。

### Project ソースファイルにトークンを含める

このオプションを有効にすると、新規の 4Dプロジェクトで保存された [メソッドのソースファイル](../Project/architecture.md#sources) には、クラシックランゲージおよびデータベースオブジェクト (定数、コマンド、テーブル、フィールド) 用の **トークン** が含まれます。 トークンとは、ソースコードファイルに挿入される `:C10` や `:5` などの追加文字で、テーブルやフィールドの名前を変更したり、4Dバージョンに関係なく要素を識別したりすることを可能にします ([フォーミュラ内でのトークンの使用](https://doc.4d.com/4Dv19R3/4D/19-R3/Using-tokens-in-formulas.300-5583062.ja.html) を参照ください）。

バージョン管理システムや外部のコードエディターを新規プロジェクトで使用したい場合、これらのツールでのコードの可読性のために、このオプションのチェックを外すことができます。

> このオプションは、プロジェクトにのみ適用できます (バイナリデータベースでは常にトークンが含まれます)。

> *option* パラメーターに 1 を指定して [`METHOD GET CODE`](https://doc.4d.com/4dv19R/help/command/ja/page1190.html) を呼び出すと、 トークンを含むコードをいつでも取得することができます。

#### 既存プロジェクトからトークンを除外する

テキストエディターを使い、[`<applicationName>.4DProject`](../Project/architecture.md#applicationname4dproject-ファイル) ファイルに以下のキーを挿入することで、既存のプロジェクトでも **トークンなし** でコードを保存することができます:

```
"tokenizedText": false
```

> この設定は、メソッドが保存されるときにのみ考慮されます。 つまり、再保存しない限り、プロジェクト内の既存メソッドはそのまま残されます。


### `.gitignore` ファイルを作成する

新しいプロジェクトでは、いくつかのファイルを git に無視させたいことがあるかもしれません。

この設定をおこなうには、**.gitignore ファイルを作成する** オプションをチェックします。

このボックスがチェックされている場合、4D でプロジェクトを作成すると、4D は `.gitignore` ファイルを `Project` フォルダーと同階層に作成します ([プロジェクトのアーキテクチャー](Project/architecture.md#.gitignore-ファイル-任意) 参照)。

鉛筆アイコンをクリックすると、`.gitignore` ファイルのデフォルトの内容を定義することができます。 これにより、.gitignore 設定ファイルがテキストエディターで開かれます。 このファイルの内容は、新規プロジェクトで `.gitignore` ファイルを生成する際に使用されます。

`.gitignore` ファイルの仕組みを理解するには、[git の公式ドキュメント](https://git-scm.com/docs/gitignore) が参考になります。

### テキスト比較の言語

このパラメーターは新規データベースにおいて、文字列の処理と比較で使用されるデフォルトの言語を設定します。 言語の選択は、テキストの並べ替えや検索、文字の大小などの比較ルール等に直接影響を与えます。ただし、テキストの翻訳や日付・時刻・通貨のフォーマットはシステムの言語設定が使用され、この設定には影響されません。 初期設定では、4D はシステムに設定されているカレントのユーザー言語を使用します。

つまり、4Dデータベースはシステム言語とは異なる言語で動作することができます。 データベースが開かれるとき、4Dエンジンはデータファイルに使用されている言語を検知し、(インタープリターやコンパイルモードの) ランゲージに提供します。 データベースエンジン、あるいはランゲージのいずれがテキスト比較をおこなうかに関わらず、同じ言語が使用されます。

新規にデータファイルを作成する際、4D はこのメニューで設定されている言語を使用します。 ストラクチャーの言語と異なる言語のデータファイルを開くと、データファイルの言語が使用され、ストラクチャーに言語コードがコピーされます。
> データベース設定を使用して、開かれているデータベースの言語を変更することができます ([テキスト比較](../settings/database.md#テキスト比較) 参照)。

## ドキュメントの場所

このエリアでは、カレントブラウザーに表示される 4D HTMLドキュメントへのアクセスを設定します:

*   コードエディターで、4Dクラス関数またはコマンド名にカーソルがあるときに、**F1**キーを押したとき
*   エクスプローラーの **コマンドページ** 上の 4Dコマンドをダブルクリックしたとき


### ドキュメント言語

表示する HTMLドキュメントの言語。 アプリケーションの言語とは別のドキュメント言語を選択することができます。

### 最初にローカルフォルダーを見る

> このオプションは、コマンドドキュメントへのアクセスに関してのみ考慮されます (クラス関数を除く)。

4Dがドキュメントのページを探す場所を設定します。

*   チェックされている場合 (デフォルト)、4D はまずローカルフォルダーでページを探します (後述参照)。 ページが見つかれば、4D はそのページをカレントブラウザーで表示します。 見つからない場合、4D は自動でオンラインドキュメントの Webサイトを参照します。 この場合インターネットに接続されていない環境でも、ローカルのドキュメントが参照できます。
*   チェックされていない場合、4D はオンラインドキュメントの Webサイトに直接アクセスし、カレントブラウザーでページを表示します。 ページが見つからない場合、4D はブラウザーにエラーメッセージを表示します。

### ローカルフォルダー

> このオプションは、コマンドドキュメントへのアクセスに関してのみ考慮されます (クラス関数を除く)。

スタティックな HTMLドキュメントの場所を指定します。 デフォルトでこれは \Help\Command\language サブフォルダーに設定されています。 このエリアに割り当てられているメニューをクリックすると、場所を見ることができます。 このサブフォルダーが存在しない場合、場所は赤で表示されます。

この場所は必要に応じて変更することができます。たとえば、アプリケーションの言語とは異なる言語でドキュメントを表示したい場合などです。 HTMLドキュメントは、異なるボリュームや Webサーバー上などに置くことも可能です。 他の場所を指定するには、メニューの隣の **[...]** ボタンをクリックし、ドキュメントのルートフォルダー (`fr`, `en`, `es`, `de` または `ja` などの言語に対応するフォルダー) を選択します。 
